--- a/app/src/main/res/drawable/style_about_button.xml
+++ b/app/src/main/res/drawable/style_about_button.xml
@@ -3,7 +3,7 @@
     <item android:state_pressed="true" >
         <shape>
             <solid
-                android:color="@android:color/darker_gray" />
+                android:color="@android:color/white" />
             <stroke
                 android:width="5dp"
                 android:color="@android:color/transparent" />
@@ -14,11 +14,11 @@
     <item>
         <shape>
             <gradient
-                android:startColor="@android:color/darker_gray"
-                android:endColor="@android:color/darker_gray" />
+                android:startColor="@android:color/white"
+                android:endColor="@android:color/white" />
             <stroke
                 android:width="1dp"
-                android:color="@android:color/darker_gray" />
+                android:color="@android:color/white" />
             <corners
                 android:radius="2dp" />
         </shape>
