change some textview

--- a/app/src/main/res/layout/activity_hitung_balok.xml
+++ b/app/src/main/res/layout/activity_hitung_balok.xml
@@ -163,8 +163,10 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:layout_marginTop="8dp"
+            android:gravity="center_horizontal"
             android:text="@string/hasil"
-            android:textSize="18sp"
+            android:lines="2"
             android:textStyle="bold" />
 
     </LinearLayout>
