--- a/app/src/main/res/layout/activity_hitung_kerucut.xml
+++ b/app/src/main/res/layout/activity_hitung_kerucut.xml
@@ -137,8 +137,9 @@
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
             android:layout_weight="1"
+            android:gravity="center_horizontal"
             android:text="@string/hasil"
-            android:textSize="18sp"
+            android:lines="2"
             android:textStyle="bold" />
 
     </LinearLayout>
