--- a/app/src/main/res/layout/activity_hitung_tabung.xml
+++ b/app/src/main/res/layout/activity_hitung_tabung.xml
@@ -19,7 +19,7 @@
 
             <ImageView
                 android:id="@+id/gambar"
-                android:layout_width="150dp"
+                android:layout_width="100dp"
                 android:layout_height="150dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="8dp"
@@ -124,8 +124,9 @@
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
             android:layout_weight="1"
+            android:gravity="center_horizontal"
             android:text="@string/hasil"
-            android:textSize="18sp"
+            android:lines="2"
             android:textStyle="bold" />
 
     </LinearLayout>
