--- a/app/src/main/res/layout/activity_hitung_bola.xml
+++ b/app/src/main/res/layout/activity_hitung_bola.xml
@@ -11,7 +11,7 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="com.newbie.irhamdzuhri.RumusRumus.MainActivity">
+        tools:context="com.newbie.irhamdzuhri.HitungBangunRuangDanDatar.MainActivity">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -64,6 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/jari_jari"
+            android:layout_marginTop="8dp"
             android:textSize="15sp" />
 
         <EditText
@@ -111,8 +112,9 @@
             android:layout_marginTop="8dp"
             android:layout_weight="1"
             android:gravity="center_horizontal"
-            android:text="@string/hasil"
             android:lines="2"
+            android:text="@string/hasil"
+            android:textSize="15sp"
             android:textStyle="bold" />
 
     </LinearLayout>
