--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -53,6 +53,7 @@
         android:gravity="center_horizontal"
         android:text="irhamdz@gmail.com"
         android:textColor="@android:color/white"
-        android:textStyle="italic" />
+        android:textStyle="italic"
+        android:onClick="contactMe"/>
 
 </RelativeLayout>
