--- a/app/src/main/res/layout/activity_hitung_persegi_panjang.xml
+++ b/app/src/main/res/layout/activity_hitung_persegi_panjang.xml
@@ -11,7 +11,7 @@
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        tools:context="com.newbie.irhamdzuhri.RumusRumus.MainActivity">
+        tools:context="com.newbie.irhamdzuhri.HitungBangunRuangDanDatar.MainActivity">
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -65,6 +65,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:text="@string/panjang"
             android:textSize="15sp" />
 
@@ -122,8 +123,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:gravity="center_horizontal"
-            android:text="@string/hasil"
             android:lines="2"
+            android:text="@string/hasil"
+            android:textSize="15sp"
             android:textStyle="bold" />
 
     </LinearLayout>
