--- a/app/src/main/res/layout/activity_pilih_bangun_ruang.xml
+++ b/app/src/main/res/layout/activity_pilih_bangun_ruang.xml
@@ -4,12 +4,12 @@
     android:id="@+id/activity_pilih_bangun_ruang"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    tools:context="com.newbie.irhamdzuhri.RumusRumus.PilihBangunRuangActivity">
+    tools:context="com.newbie.irhamdzuhri.HitungBangunRuangDanDatar.PilihBangunRuangActivity">
 
     <TextView
         android:layout_width="match_parent"
@@ -31,6 +31,12 @@
         android:textColor="@color/colorPrimaryDark"
         android:textSize="15sp"
         android:textStyle="bold" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginBottom="8dp"
+        android:background="@color/colorPrimary" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -59,6 +65,7 @@
             android:textColor="@android:color/white" />
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
