--- a/app/src/main/res/layout/activity_hitung_kerucut.xml
+++ b/app/src/main/res/layout/activity_hitung_kerucut.xml
@@ -22,85 +22,99 @@
                 android:layout_width="130dp"
                 android:layout_height="150dp"
                 android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
                 android:contentDescription="@string/text_gambar"
+                android:scaleType="centerCrop"
                 android:src="@drawable/kerucut" />
 
-            <TextView
-                android:id="@+id/luas"
+            <TableLayout
+                android:id="@+id/table"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="150dp"
                 android:layout_toEndOf="@+id/gambar"
-                android:text="@string/luas"
-                android:textStyle="bold" />
+                android:background="@android:color/white"
+                android:padding="10dp">
 
-            <TextView
-                android:id="@+id/volume"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/rumus_luas"
-                android:layout_toEndOf="@+id/gambar"
-                android:text="@string/volume"
-                android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/luas"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:text="@string/luas"
+                    android:textStyle="bold" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/volume"
-                android:layout_toEndOf="@+id/gambar"
-                android:text="( 1/3 x (Phi x ( r x r )) x t )" />
+                <TextView
+                    android:id="@+id/rumus_luas"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_weight="1"
+                    android:text="(Phi * ( r x r )) + ( Phi x r x s )" />
 
-            <TextView
-                android:id="@+id/rumus_luas"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_alignParentEnd="true"
-                android:layout_below="@+id/luas"
-                android:layout_marginBottom="8dp"
-                android:layout_toEndOf="@+id/gambar"
-                android:text="(Phi * ( r x r )) + ( Phi x r x s )" />
+                <TextView
+                    android:id="@+id/volume"
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:text="@string/volume"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:text="( 1/3 x (Phi x ( r x r )) x t )" />
+
+            </TableLayout>
         </RelativeLayout>
 
+        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <RadioButton
+                android:id="@+id/radio_hitung_luas"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="onRadioButtonClicked"
+                android:text="@string/hitung_luas" />
+
+            <RadioButton
+                android:id="@+id/radio_hitung_volume"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="onRadioButtonClicked"
+                android:text="@string/hitung_volume" />
+        </RadioGroup>
+
         <TextView
+            android:id="@+id/text_view_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="@string/jari_jari"
+            android:text=""
             android:textSize="15sp" />
 
         <EditText
-            android:id="@+id/edt_jari_kerucut"
+            android:id="@+id/edt_text_view_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/zero"
             android:inputType="numberDecimal" />
 
         <TextView
+            android:id="@+id/text_view_2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/tinggi"
+            android:text=""
             android:textSize="15sp" />
 
         <EditText
-            android:id="@+id/edt_tinggi_kerucut"
+            android:id="@+id/edt_text_view_2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/zero"
             android:inputType="numberDecimal" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Garis Lukis  *(untuk menghitung luas)"
-            android:textSize="15sp" />
-
-        <EditText
-            android:id="@+id/edt_garis_lukis_kerucut"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/zero"
-            android:inputType="numberDecimal" />
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -108,36 +122,23 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/btn_hitung_luas_kerucut"
-                style="?android:buttonBarButtonStyle"
+                android:id="@+id/btn_hitung"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="4dp"
                 android:layout_weight="1"
                 android:background="@drawable/bg_button"
-                android:onClick="hitung_luas"
-                android:text="@string/hitung_luas"
+                android:onClick="hitung"
+                android:text="@string/hitung"
                 android:textColor="@android:color/white" />
 
-            <Button
-                android:id="@+id/btn_hitung_volume_kerucut"
-                style="?android:buttonBarButtonStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="4dp"
-                android:layout_weight="1"
-                android:background="@drawable/bg_button"
-                android:onClick="hitung_volume"
-                android:text="@string/hitung_volume"
-                android:textColor="@android:color/white" />
         </LinearLayout>
 
         <TextView
-            android:id="@+id/txt_hasil_kerucut"
+            android:id="@+id/txt_hasil"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_weight="1"
             android:gravity="center_horizontal"
             android:lines="2"
             android:text="@string/hasil"
